# budge

./: .readthedocs.yaml  CHANGELOG.md  LICENSE-GPL.md  LICENSE.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: pypi.yml  pytest.yml
docs/: conf.py  requirements.in  requirements.txt
example/: pyproject.toml
src/budge/: __init__.py  account.py  collection.py  money.py  rrule.py  transaction.py  transfer.py
tests/budge/: test_account.py  test_budge.py  test_money.py  test_rrule.py  test_transfer.py
