[project]
name = "budge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Brooklyn Hannah", email = "jesse@jbhannah.net" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "stockholm>=0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
